fix(): Remove -webkit-backface-visiblity from css

--- a/src/transition.css
+++ b/src/transition.css
@@ -2,7 +2,6 @@
 
 /* Page class for all mobile pages */
 .mb-page {
-  -webkit-backface-visibility: hidden;
   position: absolute;
   width: 100%;
   height: 100%;
